--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,17 @@
 /* * {
     @apply transition-colors duration-200;
 } */
+
+@keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%); /* Ajustado para cubrir la mitad del contenedor */
+    }
+  }
+  
+  .scroll-container {
+    animation: scroll 20s linear infinite; /* Aumenta el tiempo para que sea más lento */
+  }
+  
